12123 fix slideshow issues (#12620)
* Issue #12123 - Add layout class to block

* Issue #12123 - Create new formatter to handle slideshow image markup

* Issue #12123 - Fix connection between library and html markup, fix DI

* Issue #12123 - Create a test to formatter and remove breakpoints test from block render

* Issue #12123 - Fix library dependency

* Issue #12123 - Naming fix

* Issue #12123 - Test standard layout type in formatter

* Issue #12123 - Test extra class depends on layout

* Issue #12123 - Fit large imagestyle to 1170

* Issue #12123 - Refactor small and medium imagestyle

* Issue #12123 - Refactor into 2 breakpoints

* Issue #12123 - Refactor Formatter code

* Issue #12123 - Implement title and alt rendering

* Issue #12123 - Test title and alt rendering

* Issue #12123 - Xss filtering

* Issue #12123 - Add link integration to image

* Issue #12123 - Create tests for linking

* Issue #12123 - Rename group name

* Issue #12123 - Refactor groups, needs to create a new job

* Issue #12123 - Refactor get formatter instance

--- a/config/sync/slick.optionset.os_slideshow.yml
+++ b/config/sync/slick.optionset.os_slideshow.yml
@@ -13,10 +13,10 @@ label: 'Os slideshow'
 weight: -10
 group: ''
 skin: default
-breakpoints: 3
+breakpoints: 2
 optimized: false
 options:
-  options__active_tab: edit-options-responsives
+  options__active_tab: edit-options-settings
   settings:
     mobileFirst: false
     asNavFor: ''
@@ -72,7 +72,7 @@ options:
   responsives:
     responsive:
       -
-        breakpoint: 300
+        breakpoint: 576
         unslick: false
         settings:
           adaptiveHeight: false
@@ -109,44 +109,7 @@ options:
           verticalSwiping: false
           waitForAnimate: true
       -
-        breakpoint: 600
-        unslick: false
-        settings:
-          adaptiveHeight: false
-          autoplay: false
-          autoplaySpeed: 3000
-          pauseOnHover: false
-          pauseOnDotsHover: false
-          pauseOnFocus: false
-          arrows: true
-          centerMode: false
-          centerPadding: 50px
-          dots: false
-          draggable: true
-          fade: false
-          focusOnSelect: false
-          infinite: true
-          initialSlide: 0
-          respondTo: slider
-          rows: 1
-          slidesPerRow: 1
-          slidesToShow: 1
-          slidesToScroll: 1
-          speed: 500
-          swipe: true
-          swipeToSlide: false
-          edgeFriction: 0.35000000000002
-          touchMove: true
-          touchThreshold: 5
-          cssEase: ease
-          cssEaseBezier: ''
-          cssEaseOverride: ''
-          variableWidth: false
-          vertical: false
-          verticalSwiping: false
-          waitForAnimate: true
-      -
-        breakpoint: 900
+        breakpoint: 768
         unslick: false
         settings:
           adaptiveHeight: false
