--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -54,6 +54,7 @@ slideshowWidget:
   js:
     js/os_widgets.slideshow.js: { weight: -1 }
   dependencies:
+    - core/drupal.dialog.ajax
     - slick/slick.load
 lopwidgetForm:
   js:
