--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,11 @@ env:
     - JOB=job:run-unit-tests
     - JOB="job:run-kernel-tests widgets-1"
     - JOB="job:run-kernel-tests widgets-2"
+    - JOB="job:run-kernel-tests widgets-3"
     - JOB="job:run-kernel-tests os-theme-preview,cp-appearance,profiles"
     - JOB="job:run-kernel-tests publications-1,redirect"
     - JOB="job:run-kernel-tests publications-2,wysiwyg"
-    - JOB="job:run-kernel-tests vsite,widgets-3"
+    - JOB="job:run-kernel-tests vsite"
     - JOB="job:run-kernel-tests os"
     - JOB="job:run-kernel-tests cp"
     - JOB="job:run-kernel-tests other,cp-menu"
