--- a/config/sync/core.entity_view_display.paragraph.slideshow.slideshow_standard.yml
+++ b/config/sync/core.entity_view_display.paragraph.slideshow.slideshow_standard.yml
@@ -13,10 +13,9 @@ dependencies:
     - paragraphs.paragraphs_type.slideshow
   module:
     - layout_builder
-    - link
+    - os_widgets
 third_party_settings:
   layout_builder:
-    sections: {  }
     allow_custom: false
     enabled: false
 id: paragraph.slideshow.slideshow_standard
@@ -24,16 +23,8 @@ targetEntityType: paragraph
 bundle: slideshow
 mode: slideshow_standard
 content:
-  field_slide_alt_text:
-    weight: 6
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_slide_description:
-    weight: 5
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -41,7 +32,7 @@ content:
     type: string
     region: content
   field_slide_headline:
-    weight: 3
+    weight: 1
     label: above
     settings:
       link_to_entity: false
@@ -49,32 +40,14 @@ content:
     type: string
     region: content
   field_slide_image:
-    type: entity_reference_entity_view
-    weight: 2
+    type: os_widgets_slideshow_image
+    weight: 0
     label: hidden
     settings:
-      view_mode: slideshow_standard
-      link: false
+      layout_type: standard
     third_party_settings: {  }
     region: content
-  field_slide_link:
-    weight: 4
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
-    region: content
-  field_slide_title_text:
-    weight: 7
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden: {  }
+hidden:
+  field_slide_alt_text: true
+  field_slide_link: true
+  field_slide_title_text: true
