12450 dataverse list widget (#12654)
* Issue #12451 - Adds new blocktype dataverse_search_box

* Issue #12451 - Save config udpate with no actual change, just standard inclusion of a settings key by drupal

* Issue #12451 - Adds widget backend fields for identifier and text placeholder

* Issue #12451 - Builds widget block content with custom form

* Issue #12451 - Attaches JS to DV search form that open new search URL

* Issue #12451 - Replaces hardcoded DV url, id, etc with values from block config

* Issue #12451 - Fixes minor code review change requests

* Issue #12451 - Injects FormBuilder instead of direct service call

* Issue #12451 - Adds unit test for DataverseSearchBox

* Issue #12450 - Adds new blocktype dataverse_list with fields

* Issue #12450 - Adds embed height field to DV list widget

* Issue #12450 - Renders iframe with DV list widget content

* Issue #12450 - Unit tests DV list widget

* Issue #12450 - Create field prefix

* Issue #12450 - Dependency simplify

* Issue #12450 - Refactor rendering into custom theme and add Xss filter

* Issue #12450 - Replace Unit test into kernel test

* Issue #12450 - Add xss filter to user input

* Issue #12450 - Remove unrelevant comment

* Issue #12450 - Replace Unit test with kernel render test

* Issue #12450 - Implement config depend url store

* Issue #12450 - Extend cofnig schema

--- a/profile/modules/apps/os_widgets/config/schema/os_widgets.schema.yml
+++ b/profile/modules/apps/os_widgets/config/schema/os_widgets.schema.yml
@@ -23,3 +23,13 @@ os_widgets.layout_context.*:
     data:
       type: mapping
       label: 'Data'
+os_widgets.dataverse:
+  type: config_entity
+  label: 'Dataverse'
+  mapping:
+    listing_base_url:
+      type: string
+      label: 'Listing base URL'
+    search_base_url:
+      type: string
+      label: 'Search base URL'
