Issue #12739 - Drupal 8.7.x security fixes (#12740)
* Issue #12739 - Drupal 8.7.x security fixes

Fixes #12739

* Issue #12739 - Suppress code standard failures

* Issue #12739 - Fix list of file widget test failures

* Issue #12739 - Suppress code standard failures

--- a/composer.json
+++ b/composer.json
@@ -184,7 +184,7 @@
         "drupal/config_sync": "^2.0@alpha",
         "drupal/console": "^1.0.2",
         "drupal/context": "^4.0@beta",
-        "drupal/core": "^8.7.8",
+        "drupal/core": "^8.7.11",
         "drupal/date_recur": "^2.0",
         "drupal/date_recur_modular": "^1.0@alpha",
         "drupal/disqus": "^1.0",
@@ -245,13 +245,14 @@
         "twbs/bootstrap-sass": "^3.3.7",
         "twig/extensions": "^1.5",
         "vlucas/phpdotenv": "^2.4",
-        "webflo/drupal-core-require-dev": "^8.7.8",
+        "webflo/drupal-core-require-dev": "^8.7.11",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
         "dmore/chrome-mink-driver": "^2.6",
+        "drupal/coder": "8.3.3",
         "drupal/devel": "^1.2",
         "drupal/features": "^3.7",
         "drupal/restui": "^1.17",
